src/visionlouisville/static/css/styles.css
/* ... */
/* Navigation Menus */
.main-menu {
  float: right;
}
.main-menu-item {
  float: right;
  margin: 0 0 0 5px;
  padding: 0;
}
.main-menu-item a {
  float: left;
  height: 40px;
  padding: 0 5px;
}
.menu-icon {
  display: block;
  width: 25px;
  height: 27px;
  margin: 7px 0 0 0;
}

a.authentication-link-login {
  display: block;
  height: 40px;
  line-height: 40px;
  padding: 0 5px;
  margin: 0 5px;
  text-decoration: none;
  color: #e7e7d7;
  font-weight: bold;
  text-shadow: 0 -1px 0 #268099;
}
.twitter-icon {
  height: 22px;
  width: auto;
  vertical-align: top;
  position: relative;
  top: 8px;
}

.user-menu-item {
  position: relative;
  float: right;
  padding: 0 10px 0 8px;
  margin: 8px 10px 0 10px;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}
.user-menu-item:after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 60px;
  height: 5px;
  background: url(../images/user-menu-shadow.png) 0 0 no-repeat scroll;
}
ul.user-menu {
  display: none;
  position: absolute;
  top: 100%;
  right: 0;
  background-color: #7ec4d8;
  padding: 2px 2px 0 2px;
  margin: -3px 0 0 0;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
}
ul.user-menu:before {
  content: "";
  position: absolute;
  top: -15px;
  right: 23px;
  width: 0;
  height: 0;
  border: 8px solid #7ec4d8;
  border-top-color: transparent;
  border-right-color: transparent;
  border-left-color: transparent;
}
ul.user-menu:after {
  content: "";
  position: absolute;
  top: -12px;
  right: 23px;
  width: 0;
  height: 0;
  border: 8px solid #268099;
  border-top-color: transparent;
  border-right-color: transparent;
  border-left-color: transparent;
}
.user-menu.is-open {
  display: block;
}
.sub-menu-item {
  background-color: #268099;
  border-bottom: 2px solid #7ec4d8;
}
.sub-menu-item a {
  display: block;
  text-align: center;
  padding: 0.5em 1em;
  white-space: nowrap;
  color: #d5d5c6;
  text-decoration: none;
  text-transform: uppercase;
}
.user-menu-avatar {
  display: block;
  background-color: #48a5bf;
  border: 2px solid #7ec4d8;
  border-top: 0;
  border-radius: 0 0 20px 20px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.3);
}
.user-menu-avatar img {
  display: block;
  width: 40px;
  height: 40px;
  border-radius: 0 0 18px 18px;
}


/* =Visions
-------------------------------------------------------------- */

.vision {
  position: relative;
  padding-left: 40px;
}
.vision-media-container {
  display: block;
  background-color: #b2b2a6;
  margin: 0 -10px 0;
  position: relative;
  top: -20px;
  box-shadow: inset 0 -5px 10px rgba(0,0,0,0.25);
  background-position: center center;
  background-size: 100% auto;
  -webkit-background-size: 100% auto;
}
.vision .vision-media-container {
  margin: 10px -15px 10px -45px;
  top: 0;
  background-color: transparent;
  box-shadow: none;
}
.vision .vision-media-container img {
  box-shadow: 0 3px 5px rgba(0,0,0,0.5), 0 -1px 0 #fff;
  border-radius: 2px;
}
.vision-media-container.is-collapsed {
  height: 60px;
}
.vision-media-container.is-collapsed img {
  display: none;
}
.vision-media {
  display: block;
}

.vision-form .vision-media {
  min-height: 20px;
}

.vision-header {
  margin-top: -10px;
}
.datetime {
  float: right;
  font-size: x-small;
  padding: 10px 0;
  text-decoration: none;
}
.author {
  display: block;
  padding: 10px 0;
}
.twitter-handle {
  font-style: normal;
  font-weight: 700;
  color: #808073;
}
.vision a.user-link {
  background-color: #48a5bf;
  border: 2px solid #7ec4d8;
  border-left: 0;
  border-radius: 0 20px 20px 0;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
  margin-left: -50px;
  margin-bottom: 75px;
}
.vision .avatar {
  width: 40px;
  height: 40px;
  border-radius: 0 18px 18px 0;
}
.vision .vision-description {
  display: block;
  font-size: medium;
  font-weight: 700;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Vision Footer */
.vision-footer {
  clear: both;
  position: relative;
  margin: 20px -10px -20px -50px;
  background-color: #d5d5c6;
  box-shadow: inset 0 3px 3px rgba(0,0,0,0.15);
}
.category-link {
  float: right;
  padding: 0 10px;
  text-decoration: none;
  line-height: 2.5em;
}
.retweet-link,
.reply-link {
  float: left;
  text-decoration: none;
  position: relative;
  font-weight: 800;
  background: #48a5bf;
  color: #fff;
  box-shadow: inset 0 20px 20px #7ec4d8;
  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
  padding: 0 11px 0 28px;
  line-height: 2.5em;
}
.reply-link {
  border-left: 1px solid #48a5bf;
  padding-left: 25px;
}
.tweet-icon {
  display: block;
  width: 20px;
  height: 15px;
  position: absolute;
  left: 5px;
  top: 50%;
  overflow: hidden;
  margin-top: -7px;
}
.tweet-icon img {
  width: 100%;
  position: relative;
}
.retweet-link:hover,
.retweet-link.retweeted,
.reply-link:hover {
  color: #468020;
  text-shadow: 0 1px 1px rgba(255,255,255,0.5);
}
.retweet-link:hover img,
.retweet-link.retweeted img,
.reply-link:hover img {
  top: -15px;
}

.retweet-login-prompt {
  position: absolute;
  z-index: 2;
  top: -15px;
  left: 0;
  background: #fff;
  padding: 15px 15px 15px 15px;
  box-shadow: 0 0 10px rgba(0,0,0,0.5);
  border-radius: 0 6px 6px 0;
}

.confirm-retweet-prompt {
  clear: both;
  background-color: #fff;
  box-shadow: 0 -3px 3px rgba(0,0,0,0.15);
  padding: 10px;
}
.tweet-preview {}
.tweet-preview-avatar {
  float: left;
  display: block;
  width: 40px;
  height: 40px;
  margin: 5px 10px 20px 0;
  border-radius: 5px;
}
.tweet-preview-text {
  font-size: medium;
  font-weight: 600;
  padding-left: 50px;
}

/* Conversation */
.replies-region {}
.reply {
  padding-left: 50px;
}
.replies-region .avatar {
  float: left;
  border-radius: 5px;
  margin-left: -50px;
}
.replies-region .datetime {
  padding: 0;
}

/* Vision List */
.vision-list {
  clear: both;
}
.vision-list li {
  margin-bottom: 10px;
  position: relative;
}
.vision-list .vision {
  background: #fff;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
  margin-bottom: 20px;
  padding-right: 10px;
}
/* ... */

